# Memoire_experiments

./: README.md
LLM_Bias/: .gitignore  CLAUDE.md  README.md  config.yml  pyproject.toml  requirements.txt  run_both_variants.sh  run_pipeline.py  status.py
LLM_Bias/data/base_profiles/: profile_000.json  profile_001.json  profile_002.json  profile_003.json  profile_004.json  profile_005.json  profile_006.json  profile_007.json  profile_008.json  profile_009.json  profile_010.json  profile_011.json  profile_012.json  profile_013.json  profile_014.json  profile_015.json  profile_016.json  profile_017.json  profile_018.json  profile_019.json  profile_020.json  profile_021.json  profile_022.json  profile_023.json  profile_024.json  profile_025.json  profile_026.json  profile_027.json  profile_028.json  profile_029.json  profile_030.json  profile_031.json  profile_032.json  profile_033.json  profile_034.json  profile_035.json  profile_036.json  profile_037.json  profile_038.json  profile_039.json  (+10 more)
LLM_Bias/data/profiles/: profile_001_african_poor.json  profile_001_french_poor.json  (+292 more)
LLM_Bias/docs/: design.md  profile_pools.md  prompts.md  spec_behavioral_pipeline_v3.md  testpy.md
LLM_Bias/notebooks/: _build_model_comparison.py  analysis.ipynb  explore.ipynb  h1_single.ipynb  h2_comparatif.ipynb  h3_basculement.ipynb  h4_csp.ipynb  h5_iat.ipynb  h6_verbalisation.ipynb  h7_taille.ipynb  model_comparison.ipynb
LLM_Bias/paper/: Makefile  main.tex  references.bib
LLM_Bias/utils/: analysis.py  identity_pools.py  llm_client.py  parse_response.py  render_cv.py  vllm_launcher.py
(+125 files in other folders)
